--- a/views/reviews/eachuser.ejs
+++ b/views/reviews/eachuser.ejs
@@ -34,11 +34,11 @@
 
 <h2 style="text-align:center;"> Collection of my reviews </h2>
 
-    <% foundallthereview.forEach(function(reviews) { %>
+    <% foundshop.forEach(function(reviews) { %>
 
 
 <div class="twelve columns commentresponses">
-
+<h2 class="review-image-logo"><img src="<%= reviews.shopping_id.imagelink %>"></h2>
         <h2 class="ratings">Rating: <%= reviews.rating %>/5 </h2>
          <p class="comments"><%= reviews.comments %></p>
 </div>
